--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add dist/
+        git add -f dist/
         git commit -m "chore: update built files" || echo "No changes to commit"
         git push
       env:
